# TSI

./: .gitignore  Cargo.toml  LICENSE  README.md  tailwind.config.ts
.github/workflows/: ci.yml
apps/spyder-tauri/: README.md  package-lock.json  package.json
apps/spyder-tauri/scripts/: prepare-sidecar.sh
apps/spyder-tauri/src-tauri/: Cargo.toml  tauri.conf.json
apps/spyder-tauri/src-tauri/capabilities/: default.json
apps/spyder-tauri/src-tauri/icons/: icon.icns
apps/spyder-tauri/src-tauri/src/: lib.rs  main.rs
configs/: hardware_stepper.toml  irregular.toml  pentagon_5.toml  platform_offset.toml  rect_4.toml  triangle_3.toml
crates/spyder-actuation/: Cargo.toml
crates/spyder-actuation/src/: lib.rs  mapping.rs  motor.rs  winch.rs
crates/spyder-cables/: Cargo.toml
crates/spyder-cables/src/: geometry.rs  ideal.rs  lib.rs  model.rs  pulley.rs  pulley_geom.rs  sag.rs  sag_geom.rs
crates/spyder-cli/: Cargo.toml
crates/spyder-cli/src/: lib.rs  main.rs  toml.rs
crates/spyder-core/: Cargo.toml
crates/spyder-core/src/: anchor.rs  cable_eval.rs  cable_path.rs  error.rs  fk.rs  fk_analytic.rs  ik.rs  jacobian.rs  lib.rs  pose.rs  preset.rs  robot.rs  types.rs
crates/spyder-gui/: Cargo.toml
crates/spyder-gui/src/: api.rs  cal_svc.rs  design.rs  dto.rs  hw_thread.rs  lib.rs  main.rs  motor_svc.rs  run_svc.rs  sim_svc.rs  state.rs  toml_venue.rs
crates/spyder-runtime/: Cargo.toml
crates/spyder-runtime/src/: axis_map.rs  calibration.rs  feedback.rs  lib.rs  multi_board.rs  odrive.rs  safety.rs  stepper.rs  transport.rs
crates/spyder-runtime/tests/: stepper_tcp.rs
crates/spyder-sim/: Cargo.toml
crates/spyder-sim/src/: export.rs  lib.rs  scene.rs
crates/spyder-statics/: Cargo.toml
crates/spyder-statics/src/: classify.rs  lib.rs  structure.rs  tension.rs
crates/spyder-stepper-sim/: Cargo.toml
crates/spyder-stepper-sim/src/: lib.rs  main.rs
docs/: README.md  architecture.md  blueprint.md  cli.md  config-schema.md  gui-configurator.md  gui-tauri.md  gui.md  hardware.md
docs/superpowers/plans/: 2026-07-10-spyder-full-configurator-HANDOFF.md  2026-07-10-spyder-full-configurator.md  2026-07-10-spyder-gui-HANDOFF.md  2026-07-10-spyder-gui.md  2026-07-10-spyder-next.md  2026-07-10-spyder-phase1.md  2026-07-11-spyder-polish-handoff.md
docs/superpowers/specs/: 2026-07-10-spyder-gui-design.md  2026-07-10-spyder-ik-design.md
firmware/: README.md
firmware/spyder_stepper/: spyder_stepper.ino
notebooks/: 01_ik_workspace.ipynb
python/: Cargo.toml  README.md  pyproject.toml
python/src/: lib.rs
python/tests/: test_robot.py
src/ai/: dev.ts
src/ai/flows/: random-idea-selection.ts
src/app/: actions.ts  globals.css  layout.tsx  page.tsx
src/app/(auth)/: layout.tsx
src/app/(auth)/dashboard/: page.tsx
src/app/(auth)/ideas/submit/: page.tsx
src/app/(auth)/sessions/: page.tsx
src/app/(auth)/sessions/[sessionId]/: page.tsx
src/app/(public)/: layout.tsx
src/app/(public)/forgot-password/: page.tsx
src/app/(public)/login/: page.tsx
src/app/(public)/register/: page.tsx
src/app/admin/: layout.tsx
src/app/admin/dashboard/: page.tsx
src/app/admin/ideas/: page.tsx
src/app/admin/sessions/: page.tsx
src/app/admin/users/: page.tsx
src/components/: app-header.tsx  app-sidebar.tsx  delete-session-alert.tsx  edit-idea-dialog.tsx  edit-session-dialog.tsx  idea-lottery.tsx  page-header.tsx  random-idea-picker.tsx  session-idea-lottery.tsx  session-idea-picker.tsx
src/components/icons/: logo-icon.tsx
src/components/ui/: alert-dialog.tsx
src/hooks/: use-mobile.tsx  use-toast.ts
src/lib/: auth.tsx  data.ts  placeholder-images.json  types.ts  utils.ts
web/: README.md  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts  vitest.config.ts
web/e2e/: configurator.spec.ts  start-gui-with-sim.sh
web/src/: App.tsx  context.tsx  styles.css
web/src/api/: client.test.ts  client.ts
web/src/hooks/: useSceneSnapshot.ts
web/src/pages/: DesignPage.tsx  RunPage.tsx  SimulatePage.tsx
web/src/scene/: RobotScene.tsx
