[package]
name = "spyder-gui"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Local Design/Simulate/Run GUI server for spyder"

[[bin]]
name = "spyder-gui"
path = "src/main.rs"

[dependencies]
spyder-core = { path = "../spyder-core" }
spyder-cables = { path = "../spyder-cables" }
spyder-sim = { path = "../spyder-sim" }
spyder-runtime = { path = "../spyder-runtime" }
nalgebra = { workspace = true }
serde = { workspace = true }
serde_json = "1"
thiserror = { workspace = true }
tokio = { version = "1", features = ["full"] }
axum = "0.7"
tower-http = { version = "0.5", features = ["cors", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tower = { version = "0.4", features = ["util"] }
http-body-util = "0.1"
http = "1"
bytes = "1"
