[package]
name = "spyder-sim"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Workspace sampling and trajectory helpers for spyder"

[dependencies]
spyder-core = { path = "../spyder-core" }
nalgebra = { workspace = true }
thiserror = { workspace = true }
approx = { workspace = true }
serde = { workspace = true }
serde_json = "1.0"

[dev-dependencies]
approx = { workspace = true }
