[package]
name = "spyder-tauri"
version = "0.1.0"
description = "Spyder desktop shell"
authors = ["Spyder Contributors"]
edition = "2021"

[workspace]

[lib]
name = "spyder_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "spyder-tauri"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-single-instance = "2"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
strip = true
